# q565

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
.github/workflows/: ci_checks.yml
q565/: Cargo.toml
q565-c/: Cargo.toml
q565-c/src/: lib.rs
q565-cli/: Cargo.toml
q565-cli/src/: main.rs
q565/benches/: bench.rs
q565/src/: alloc_api.rs  decode.rs  encode.rs  lib.rs  streaming_no_header.rs  utils.rs
q565/src/decode/: alloc_api.rs  ops.rs  streaming_no_header.rs
q565/src/encode/: std_api.rs
q565/tests/: roundtrip.rs
