[package]
name = "q565-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
q565 = { path = "../q565" }
argh = "0.1.10"
image = { default-features = false, version = "0.24.5", features = [
  "png",
  "bmp",
  "tiff",
  "jpeg",
] }
