[package]
name = "q565"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "RGB565 image codec based on QOI"
repository = "https://github.com/seritools/q565"

[features]
default = ["std"]
std = ["alloc", "snafu/std"]
alloc = []

[lib]
bench = false

[dependencies]
snafu = { version = "0.7.4", default-features = false, features = [
  "rust_1_61",
] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
png = "0.17.8"

[[bench]]
name = "bench"
harness = false
