[package]
name = "q565"
description = "RGB565 image codec based on QOI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc", "snafu/std"]
alloc = []

[lib]
bench = false

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
snafu = { version = "0.7.4", default-features = false, features = [
  "rust_1_61",
] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
image = { version = "0.24.6", default-features = false, features = [
  "png",
  "webp",
] }

[[bench]]
name = "bench"
harness = false
